<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:id="@+id/relativeHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:fillColor="#FFFFFFFF"
            app:pageColor="#00000000"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="#FF777777"
            app:strokeWidth="1dp"
            android:src="@drawable/carousel1"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/logo_home"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atma_korean_bbq"
        android:fontFamily="cursive"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/logo_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="130dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_atma_korean_bbq"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/relativeHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="130dp"
        android:layout_marginTop="30dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_scanqr"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/ic_baseline_qr_code_scanner_24"
        app:iconTint="@color/white"
        app:iconGravity="textStart"
        android:text="@string/scan_qr_code"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:onClick="qrscan"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reservasi"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_scanqr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/ic_baseline_date_range_24"
        app:iconTint="@color/white"
        app:iconGravity="textStart"
        android:text="Reservasi"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>