<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="res"
            type="com.nickyjovanus.atmakoreanbbq.database.Reservasi"/>
        <variable
            name="main"
            type="com.nickyjovanus.atmakoreanbbq.adapter.RecyclerViewAdapterReservasi" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mParent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/res_position"
            app:flow_verticalAlign="center"
            android:orientation="vertical"
            android:layout_width="100dp"
            android:weightSum="1"
            android:gravity="center"
            android:padding="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/red"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/position_id"
                android:layout_weight="1"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                app:flow_horizontalAlign="center"
                android:textColor="@color/white"
                app:flow_verticalAlign="center"
                tools:text="1"
                android:textSize="69sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tanggalReservasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-black"
            android:textSize="25sp"
            android:text="@{res.tanggalReservasi}"
            tools:text="2021-04-01"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/res_position"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/sesiReservasi"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@{res.sesiReservasi}"
            android:textSize="20sp"
            android:textColor="@color/red"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="12:00:00" />

        <TextView
            android:id="@+id/totalItemPrefix"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/totalitem"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tanggalReservasi"
            app:layout_constraintStart_toEndOf="@id/res_position"
            tools:text="Total Item: " />

        <TextView
            android:id="@+id/totalItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textSize="20sp"
            android:text="@{String.valueOf(res.totalItem)}"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/totalItemPrefix"
            app:layout_constraintTop_toBottomOf="@+id/tanggalReservasi"
            tools:text="3" />

        <TextView
            android:id="@+id/totalMenuPrefix"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/totalmenu"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/totalItemPrefix"
            app:layout_constraintStart_toEndOf="@id/res_position"
            tools:text="Total Menu: " />

        <TextView
            android:id="@+id/totalMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textSize="20sp"
            android:text="@{String.valueOf(res.totalMenu)}"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/totalMenuPrefix"
            app:layout_constraintTop_toBottomOf="@+id/totalItemPrefix"
            tools:text="2" />


        <TextView
            android:id="@+id/noMejaPrefix"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="sans-serif"
            android:text="@string/no_meja"
            android:textSize="20sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/totalMenuPrefix"
            app:layout_constraintStart_toEndOf="@id/res_position"
            tools:text="No. Meja: "/>

        <TextView
            android:id="@+id/noMeja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:textSize="20sp"
            android:text="@{String.valueOf(res.noMeja)}"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/noMejaPrefix"
            app:layout_constraintTop_toBottomOf="@+id/totalMenu"
            tools:text="2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

